@@ -43,7 +43,7 @@ pj_err_list[] = {
 	"invalid UTM zone number",			/* -35 */
 	"arg(s) out of range for Tcheby eval",		/* -36 */
 	"failed to find projection to be rotated",	/* -37 */
-	"failed to load NAD27-83 correction file",  	/* -38 */
+	"failed to load datum shift file",  	        /* -38 */
 	"both n & m must be spec'd and > 0",		/* -39 */
 	"n <= 0, n > 1 or not specified",		/* -40 */
 	"lat_1 or lat_2 not specified",			/* -41 */
@@ -53,6 +53,7 @@ pj_err_list[] = {
 	"geocentric transformation missing z or ellps",	/* -45 */
 	"unknown prime meridian conversion id",		/* -46 */
 	"illegal axis orientation combination",		/* -47 */
+	"point not within available datum shift grids", /* -48 */
 };
 	char *
 pj_strerrno(int err) 
